--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http": "^0.0.1-security",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.17.2",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
